Closed Bug 1619752 Opened 5 years ago Closed 5 years ago

VoiceOver doesn't recognise link-groups in firefox

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox77 --- verified

People

(Reporter: morgan, Assigned: eeejay)

References

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file, 1 obsolete file)

Safari treats this as a link group, we just go directly into the link items one by one.

data:text/html,<a href="%23"><img src="http://placekitten.com/410/410"><div><span>I am a cat please help me search the web</span></div></a>

See Also: → 1616679
Whiteboard: [mac_2020_1]

The priority flag is not set for this bug.
:Jamie, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jteh)

Setting P1 for now because of the relationship to bug 1616679. Morgan, please feel free to reprioritize if this is not appropriate.

Flags: needinfo?(jteh)
OS: Unspecified → macOS
Priority: -- → P1
Hardware: Unspecified → Desktop
Assignee: nobody → mreschenberg
Hardware: Desktop → All
Attachment #9137272 - Attachment is obsolete: true
Priority: P1 → P3
Summary: VoiceOver doesn't recognise link-groups in firefox → Should cache focusable state to set AXFocusableAncestor attribute
Assignee: mreschenberg → nobody
Whiteboard: [mac_2020_1] → [mac2020_1]
Depends on: 1629162
Assignee: nobody → eitan
Priority: P3 → P1
Summary: Should cache focusable state to set AXFocusableAncestor attribute → VoiceOver doesn't recognise link-groups in firefox

OK, so it isn't related to focusable ancestor.. instead this could be fixed by exposing an attribute, AXSelected, on all nodes and setting it to false. Unless it is an actual selectable that is selected, but that's a future patch.

I really don't understand why this is what VoiceOver needs, but it seems to do the trick.

Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/94fa8a93f4c7 Use AXSelected=false to tell VoiceOver about link groups. r=morgan
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Flags: qe-verify+

Confirmed the issue with 75.0a1 (2020-03-03) on macOS 10.15.3
Fix verified with 77.0b4, link selection as expected on click as well.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: