Bug 1619752 - Use AXSelected=false to tell VoiceOver about link groups. r=morgan

I really don't understand why this is what VoiceOver needs, but it seems to do the trick.

Differential Revision: https://phabricator.services.mozilla.com/D70776